// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H6 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 15.75,
      "lineHeight": 17.75,
      "paddingBottom": 1.8,
      "paddingTop": 4.5,
    }
  }
>
  "Radical obedience to Christ is not easy... It's not comfort, not health, not wealth, and not prosperity in this world. Radical obedience to Christ risks losing all these things. But in the end, such risk finds its reward in Christ. And he is more than enough for us." ― David Platt
</Text>
`;

exports[`the H6 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "Colfax-Bold",
      "fontSize": 15.75,
      "lineHeight": 17.75,
      "paddingBottom": 1.8,
      "paddingTop": 4.5,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H6 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 15.75,
      "lineHeight": 17.75,
      "paddingBottom": 1.8,
      "paddingTop": 4.5,
    }
  }
>
  Default H6 text
</Text>
`;
